[package]
name = "hello-wasm"
version = "0.1.0"
edition = "2018"
authors = ["yejunhong@example.com>"]
description = "test wasm-pack"
license = "MIT/Apache-2.0"
repository=""
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
